[tool.poetry]
name = "youtube-summarizer"
version = "0.1.0"
description = "A YouTube video summarizer using OpenAI's APIs"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
openai = "^1.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"